try to clean up a little