@@ -10,6 +10,11 @@
 		<artifactId>xml-parsing</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+
+	<properties>
+		<maven.build.timestamp.format>yyyy-MM-dd-HHmmss</maven.build.timestamp.format>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.gottschd</groupId>
@@ -46,7 +51,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-Xmx512m -Dfile.encoding=UTF-8</argLine>
+					<argLine>-Xmx1024m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError -Xlog:gc=debug:file=target/gc-${maven.build.timestamp}.log -XX:StartFlightRecording=disk=true,dumponexit=true,filename=target/recording-${maven.build.timestamp}.jfr,settings=profile,path-to-gc-roots=true
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
